Login and signup!

--- a/frontend/src/app/domain/public/signup/signup.component.html
+++ b/frontend/src/app/domain/public/signup/signup.component.html
@@ -14,8 +14,8 @@
                 <mat-form-field appearance="fill" class="w-100">
                   <mat-label>Email</mat-label>
                   <input matInput formControlName="email" type="email">
-                  <mat-error *ngIf="true">
-                    Test
+                  <mat-error *ngIf="signupForm.get('email')?.errors">
+                    {{ signupForm.get('email')?.errors }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -23,16 +23,19 @@
                 <mat-form-field appearance="fill" class="w-100">
                   <mat-label>Password</mat-label>
                   <input matInput formControlName="password" type="password">
-                  <mat-error *ngIf="true">
-                    Test
+                  <mat-error *ngIf="signupForm.get('password')?.errors">
+                    {{ signupForm.get('password')?.errors }}
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
-            <div class="d-flex" style="gap: 10px">
-              <button mat-raised-button color="primary">Sign up</button>
-              <button mat-stroked-button class="ml-3" routerLink="/auth/login">Log in</button>
+            <div class="d-flex mt-2" style="gap: 10px">
+              <button mat-raised-button color="primary" (click)="signup()" [disabled]="creatingUser">Sign up</button>
+              <a mat-stroked-button class="ml-3" routerLink="/auth/login" [disabled]="creatingUser">Log in</a>
             </div>
+            <mat-card-footer *ngIf="creatingUser" class="mt-2">
+              <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+            </mat-card-footer>
           </form>
         </mat-card>
       </div>
