--- a/frontend/src/app/domain/admin/users/users.component.html
+++ b/frontend/src/app/domain/admin/users/users.component.html
@@ -2,7 +2,65 @@
   <div class="row">
     <div class="col-12">
       <h1>Users</h1>
-      <p>TODO: list of users!!</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <mat-accordion class="example-headers-align">
+        <mat-expansion-panel hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Filters
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <form [formGroup]="searchUsersForm">
+            <div class="row">
+              <div class="col-lg-2">
+                <mat-form-field appearance="fill">
+                  <mat-label>Email</mat-label>
+                  <input matInput formControlName="email">
+                </mat-form-field>
+              </div>
+              <div class="col-lg-2">
+                <mat-form-field appearance="fill">
+                  <mat-label>User admin</mat-label>
+                  <mat-select formControlName="admin">
+                    <mat-option [value]="null">All</mat-option>
+                    <mat-option [value]="1">Admin</mat-option>
+                    <mat-option [value]="0">No admin</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+          </form>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-12">
+      <table mat-table [dataSource]="users" class="mat-elevation-z8 w-100">
+
+
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>Id</th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="admin">
+          <th mat-header-cell *matHeaderCellDef>Admin</th>
+          <td mat-cell *matCellDef="let element"> {{element.admin ? 'Admin' : 'No admin'}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="['id', 'email', 'admin']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['id', 'email', 'admin'];"></tr>
+      </table>
     </div>
   </div>
 </div>
