--- a/resources/frontend/src/app/domain/public/register-account/register-account.component.html
+++ b/resources/frontend/src/app/domain/public/register-account/register-account.component.html
@@ -4,29 +4,29 @@
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-          Crear una cuenta nueva
+          Create a new account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
-          <div>
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-            <input type="email" name="email" id="email"
-                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                   placeholder="ejemplo@gmail.com" required="">
+        <form class="space-y-4 md:space-y-6" [formGroup]="crearContactoForm" (submit)="sendCreateUserRequest()">
+          <div class="mt-2">
+            <app-input label="Full name" inputType="text" [formControlInput]="getFormControl('full_name')"></app-input>
           </div>
-          <div>
-            <label for="password"
-                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contraseña</label>
-            <input type="password" name="password" id="password" placeholder="••••••••"
-                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                   required="">
+          <div class="mt-3">
+            <app-input label="Email" inputType="email" placeHolder="example@gmail.com"
+
+                       [formControlInput]="getFormControl('email')"></app-input>
+          </div>
+          <div class="mt-3">
+            <app-input label="Password" inputType="password" placeHolder="**********"
+                       [formControlInput]="getFormControl('password')"></app-input>
           </div>
           <button type="submit"
-                  class="transition-all w-full dark:text-white bg-gray-100 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-primary-800">
-            Crear cuenta
+                  class="transition-all w-full dark:text-white bg-gray-100 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-primary-800">
+            Sign up
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-            ¿Ya tienes una cuenta? <a routerLink="/auth/login"
-                                      class="font-medium text-primary-600 hover:underline dark:text-primary-500">Inicia sesión</a>
+            Already have an account? <a routerLink="/auth/login"
+                                        class="font-medium text-primary-600 hover:underline dark:text-primary-500">Log
+            in</a>
           </p>
         </form>
       </div>
