--- a/resources/frontend/src/app/domain/public/login-user/login-user.component.html
+++ b/resources/frontend/src/app/domain/public/login-user/login-user.component.html
@@ -6,22 +6,15 @@
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Log in
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
-          <div>
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-            <input type="email" name="email" id="email"
-                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                   placeholder="ejemplo@gmail.com" required="">
+        <form class="space-y-4 md:space-y-6" (submit)="sendLoginRequest()" [formGroup]="formService.getForm()">
+          <div class="mt-2">
+            <app-input label="Email" inputType="email" placeHolder="ejemplo@gmail.com" [formControlInput]="formService.getFormControl('email')"></app-input>
           </div>
-          <div>
-            <label for="password"
-                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-            <input type="password" name="password" id="password" placeholder="••••••••"
-                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                   required="">
+          <div class="mt-2">
+            <app-input label="Password" inputType="password" placeHolder="••••••••" [formControlInput]="formService.getFormControl('password')"></app-input>
           </div>
           <button type="submit"
-                  class="transition-all w-full dark:text-white bg-gray-100 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-primary-800">
+                  class="transition-all w-full dark:text-white bg-gray-100 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-primary-800">
             Log in
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
