--- a/resources/frontend/src/app/domain/public/register-account/register-account.component.html
+++ b/resources/frontend/src/app/domain/public/register-account/register-account.component.html
@@ -24,8 +24,8 @@
             Sign up
           </button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-            Already have an account? <a routerLink="/auth/login"
-                                        class="font-medium text-primary-600 hover:underline dark:text-primary-500">Log
+            Already have an account? <a (click)="redirectToLogin()"
+                                        class="cursor-pointer font-medium text-primary-600 hover:underline dark:text-primary-500">Log
             in</a>
           </p>
         </form>
